--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["locale", "Arabic", "العربية"],
   "license": "MIT",
   "require": {
-      "flarum/core": "v0.1.0-beta.13"
+      "flarum/core": "0.1.0-beta.13"
   },
   "autoload": {
     "psr-4": {
